...
                            WearPrimaryButton(
                                modifier = Modifier
                                    .semantics { contentDescription = "Resume incomplete workout" }
                                    .fillMaxWidth()
                                    .transformedHeight(this, spec),
                                transformation = SurfaceTransformation(spec),
                                text = "Resume",
                                onClick = {
                                    hapticsViewModel.doGentleVibration()
                                    requestPermissionsOrResumeWorkout()
                                }
                            )
                        }
...
                            }
                        }
                        if (hasWorkoutRecord) {
                            ButtonWithText(
                                modifier = startModifier,
                                transformation = SurfaceTransformation(spec),
                                text = "Start new",
                                onClick = onStartClick,
                            )
                        } else {
                            WearPrimaryButton(
                                modifier = startModifier,
                                transformation = SurfaceTransformation(spec),
...
